--- a/app/package.json
+++ b/app/package.json
@@ -22,5 +22,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch --watch-poll=300",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.16"
     }
 }
